--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 collections:
   authors:
 
-url: https://neginex.github.io
-baseurl: /neginex
+url: "https://neginex.github.io"
+baseurl: "/neginex"
